New initial feature overview chapter

--- a/tapper.tex
+++ b/tapper.tex
@@ -112,6 +112,7 @@
 %%%%##########################################################################
 
 \newpage
+\input{chapter-overview.tex}
 \input{chapter-synopsis.tex}
 \input{chapter-infrastructure.tex}
 \input{chapter-tap.tex}
