add chapter for Perl-Coding Guide to Tapper-Manual

--- a/tapper.tex
+++ b/tapper.tex
@@ -122,6 +122,7 @@
 \input{chapter-webgui.tex}
 \input{chapter-reports-api.tex}
 \input{chapter-usecases.tex}
+\input{chapter-hacking.tex}
 
 
 %%%%##########################################################################
